Remove "Missing Worker Pool Configuration: ..." DLOG.

Non-branded builds don't have access to external worker pool
configurations. It is undesirable to log "Missing Worker Pool
Configuration: ..." every time these builds are launched.

BUG=682222

Review-Url: https://codereview.chromium.org/2641193002
Cr-Commit-Position: refs/heads/master@{#444784}

Former-commit-id: 4b9b580a3159188e0708392406b8ccb36725f479